k8s/web-app-sample02/adminer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: adminer
  name: adminer
  labels:
    app: adminer
spec:
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4.8.1
          ports:
            - containerPort: 8080
