k8s/web-app-sample02/adminer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: adminer
  name: adminer
  labels:
    app: adminer
spec:
  type: LoadBalancer
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
